@startuml class_diagram
skinparam {
    classAttributeIconSize 0
    RoundCorner 10
}
package "C++ library" {
    class Graph {
        #vertices : list<Vertex>
        #edges : list<Edge>
        --getters--
        +list<Vertex> getVertices()
        +list<Edge> getEdges()
        --modifiers--
        +addVertex(Vertex vertex) : void
        +addEdge(Vertex vertex, Vertex vertex) : void
        +removeVertex(Vertex vertex) : void
        +removeEdge(Edge edge) : void
        --analysis--
        +isEulerian() : bool
        +isHamiltonian() : bool
        +isConnected() : bool
        +isStronglyConnected() : bool
        +isOriented() : bool
        +isWeighted() : bool
        +isPlanar() : bool
        +getChromaticNumber : int
        +getNbFaces() : int
        +getNbEdges() : int
        +getNbVertices() : int
        +getVertexDegree(Vertex vertex) : int
    }

    class Edge {
        -source : Vertex
        -target : Vertex
        -weight : int
        --getters--
        +getSource() : Vertex
        +getTarget() : Vertex
        +getWeight() : int
        --setters--
        +setWeight(int weight) : void
    }

    class Vertex{
    }

    Vertex "2" -l-o "0..*" Edge
    Edge "0..*" --l--* "1" Graph
    Vertex "0..* " -l-* "1" Graph
}

package "GUI related classes"{
    class DisplayableVertex {
        -name : QString
        -position : QPointF
        -textColor : QColor
        -backgroundColor : QColor
        -borderColor : QColor
        --getters--
        -getName() : QString
        -getPosition() : QPointF
        -getTextColor() : QColor
        -getBackgroundColor() : QColor
        -getBorderColor() : QColor
        --setters--
        -setName(QString name) : void
        -setPosition(QPointF position) : void
        -setTextColor(QColor color) : void
        -setBackgroundColor(QColor color) : void
        -setBorderColor(QColor color) : void

    }
    class DisplayableGraph {
        -name : QString
        --getters--
        +getName() : QString
        --setters--
        +setName(QString name) : void
    }
    class DisplayableEdge {
        -name : QString
        -textColor : QColor
        -borderColor : QColor
        --getters--
        +getName() : QString
        +getTextColor() : QColor
        +getBorderColor() : QColor
        --setters--
        +setName(QString name) : void
        +setTextColor(QColor color) : void
        +setBorderColor(QColor color) : void
    }

}



Vertex <|-d- DisplayableVertex
Edge <|-d- DisplayableEdge
Graph <|-d- DisplayableGraph




@enduml